<!-- Copyright 2015 The Go Authors. All rights reserved.
     Use of this source code is governed by a BSD-style
     license that can be found in the LICENSE file. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="ifContentScrolls"
    tools:actionBarNavMode="standard"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPIR1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pir1"
                    tools:text="@string/pir1"
                    tools:visibility="visible" />

                <EditText
                    android:id="@+id/pir1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/ip_port"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:singleLine="true" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPIR2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pir2" />

                <EditText
                    android:id="@+id/pir2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/ip_port"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:singleLine="true" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewOPRF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oprf"
                    tools:text="OPRF"
                    tools:visibility="visible" />

                <EditText
                    android:id="@+id/oprf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/ip_port"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:singleLine="true" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPIR5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/db_size_2_x" />

                <Spinner
                    android:id="@+id/dbExpSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/db_exp"
                    android:minHeight="48dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPIR3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/partition_size_2_x" />

                <Spinner
                    android:id="@+id/segExpSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/seg_exp"
                    android:minHeight="48dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPIR9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/client_set_size_2_x" />

                <Spinner
                    android:id="@+id/clientExpSpinner"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/client_exp"
                    android:minHeight="48dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPIR7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mapping" />

                <EditText
                    android:id="@+id/mappingPercent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="number|numberDecimal"
                    android:minHeight="48dp"
                    android:text="@string/_0_99" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPRF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prf" />

                <Spinner
                    android:id="@+id/prfSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/prf_types"
                    android:minHeight="48dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPIR6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/workers" />

                <EditText
                    android:id="@+id/numWorkers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:text="@string/_8" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/doPSI"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/psi"
                android:textAlignment="center"
                android:textIsSelectable="false" />

            <Button
                android:id="@+id/doPSI_old"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/psi_krs_19"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/doOPRF"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/oprf"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/doPIR"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pir" />

            <Button
                android:id="@+id/doPartitionTest"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/partition_test"
                android:textSize="10sp" />

            <Button
                android:id="@+id/doSpeedtest"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/speed_test"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textOutput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true"
            android:keepScreenOn="true"
            android:scrollbars="horizontal"
            tools:text="@tools:sample/lorem/random" />

    </LinearLayout>

</RelativeLayout>
